--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<%= stylesheet_link_tag "application.css" %>
+<%= stylesheet_link_tag "application" %>
 <html>
   <head>
     <title>Extrabasic</title>
