--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,24 @@
-<h1>Listing articles</h1>
-<%= link_to 'New article', new_article_path %>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th></th>
-  </tr>
-
-  <% @articles.each do |article| %>
+<h1>Articles</h1>
+<table class="table">
+  <thead>
     <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy', article_path(article),
-                      method: :delete,
-                      data: { confirm: 'Are you sure?' } %></td>
+      <th scope="col">Title</th>
+      <th scope="col">Text</th>
+      <th scope="col">Actions</th>
     </tr>
-  <% end %>
+  </thead>
+  <tbody>
+    <% @articles.each do |article| %>
+      <tr>
+        <td><%= link_to article.title, article_path(article) %></td>
+        <td><%= article.text %></td>
+        <td><%= link_to 'Edit', edit_article_path(article) %>
+            <%= link_to 'Destroy', article_path(article),
+                        method: :delete,
+                        data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+
+    <% end %>
+  </tbody>
 </table>
+<%= link_to 'New article', new_article_path %>
