--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,21 @@
 
 
 @import 'bootstrap';
+
+.jumbotron {
+  /* The image used */
+  background-image: url("https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+//body {
+//  background: transparentize(white, 0.25);
+//}
+
