--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit article</h1>
+<div class="jumbotron text-center">
+  <h1 class="display-4">Edit article</h1>
+</div>
 
 <%= render 'form' %>
 
