--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Articles</h1>
-<table class="table">
+<!--<div class="container jumbotron text-center">-->
+<!--  <h1 class="display-4">Articles</h1>-->
+<!--</div>-->
+<div class="jumbotron text-center">
+    <h1 class="display-4">Articles</h1>
+</div>
+<table class="table container">
   <thead>
     <tr>
       <th scope="col">Title</th>
@@ -21,4 +26,10 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'New article', new_article_path %>
+<!--<button type="button" class="btn btn-primary">New article<%#= link_to 'New article', new_article_path %></button>-->
+<!--<div class="btn btn-primary">-->
+  <%#= link_to 'New article', new_article_path, :class => "btn" %>
+<!--</div>-->
+<div class="container text-center">
+  <a class="btn btn-primary" href=<%= new_article_path %> role="button">New article</a>
+</div>
