--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <%= stylesheet_link_tag "application" %>
-<html>
+<html class="container">
   <head>
     <title>Extrabasic</title>
     <%= csrf_meta_tags %>
