--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Article</h1>
+<div class="jumbotron text-center">
+  <h1 class="display-4">New Article</h1>
+</div>
 
 <%= render 'form' %>
 
