--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,15 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
-<h2>Comments</h2>
-<%= render @article.comments %>
-
-<h2>Add a comment:</h2>
-<%= render 'comments/form' %>
+<div class="jumbotron text-center">
+  <h1 class="display-4"><%= @article.title %></h1>
+  <p><%= @article.text %></p>
+</div>
+<h2>Comments:</h2>
+<div class="card-columns">
+  <%= render @article.comments %>
+</div>
+<div class="container">
+  <h2>Add a comment:</h2>
+  <%= render 'comments/form' %>
+</div>
 
 <%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', articles_path %>
