--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,23 @@
 <div class="jumbotron text-center">
   <h1 class="display-4"><%= @article.title %></h1>
-  <p><%= @article.text %></p>
-</div>
-<h2>Comments:</h2>
-<div class="card-columns">
-  <%= render @article.comments %>
+<!--  <h1 class="display-4">Article</h1>-->
 </div>
 <div class="container">
-  <h2>Add a comment:</h2>
-  <%= render 'comments/form' %>
+  <h2><%= @article.title %></h2>
+  <p><%= @article.text%></p>
 </div>
+<div class="container text-center">
+  <a class="btn btn-primary" href=<%= edit_article_path %> role="button">Edit</a>
+  <a class="btn btn-primary" href=<%= articles_path %> role="button">Back</a>
+</div>
+<div class="container">
+  <h2>Comments:</h2>
+  <div class="card-columns">
+    <%= render @article.comments %>
+  </div>
+  <div class="container">
+    <h2>Add a comment:</h2>
+    <%= render 'comments/form' %>
+  </div>
 
-<%= link_to 'Edit', edit_article_path(@article) %>
-<%= link_to 'Back', articles_path %>
+</div>
