--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_with(model: [ @article, @article.comments.build ],
               local: true) do |form| %>
-  <p>
+  <div class="form-group">
     <%= form.label :commenter %><br/>
     <%= form.text_field :commenter %>
-  </p>
-  <p>
+  </div>
+  <div class="form-group">
     <%= form.label :body %><br/>
     <%= form.text_area :body %>
-  </p>
+  </div>
   <p>
     <%= form.submit %>
   </p>
