--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <%= stylesheet_link_tag "application" %>
 <html class="container">
   <head>
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="jumbotron text-center">
+      <h1 font>Extra Basic</h1>
+      <p>A blog for extra girls who are basic af</p>
+    </div>
+      <%= yield %>
   </body>
 </html>
