--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,15 +13,15 @@
     </div>
   <% end %>
 
-  <p>
-    <%= form.label :title %><br/>
-    <%= form.text_field :title %>
-  </p>
+  <div class="form-group">
+    <%= form.label :title, class: "control-label" %><br/>
+    <%= form.text_field :title, class: "form-control" %>
+  </div>
 
-  <p>
-    <%= form.label :text %><br/>
-    <%= form.text_area :text %>
-  </p>
+  <div class="form-group">
+    <%= form.label :text, class: "control-label" %><br/>
+    <%= form.text_area :text, class: "form-control" %>
+  </div>
 
   <p>
     <%= form.submit %>
