--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,4 @@
-<div class="jumbotron text-center">
-  <h1 class="display-4">Edit article</h1>
-</div>
-
+<h1>Edit article</h1>
 <%= render 'form' %>
 
 <%= link_to 'Back', articles_path %>
