--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,4 @@
-<div class="jumbotron text-center">
-    <h1 class="display-4">Articles</h1>
-</div>
+<h1>Articles:</h1>
 <table class="table container">
   <thead>
     <tr>
