--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,15 @@
 <%= form_with(model: [ @article, @article.comments.build ],
               local: true) do |form| %>
   <div class="form-group">
-    <%= form.label :commenter %><br/>
-    <%= form.text_field :commenter %>
+    <%= form.label :commenter, class: "control-label" %><br/>
+    <%= form.text_field :commenter, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= form.label :body %><br/>
-    <%= form.text_area :body %>
+    <%= form.label :body, class: "control-label" %><br/>
+    <%= form.text_area :body, class: "form-control" %>
   </div>
   <p>
     <%= form.submit %>
   </p>
 <% end %>
+
