--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,10 +6,12 @@
     <div class="card-text">
       <%= comment.body %>
     </div>
-    <p>
-      <%= link_to 'Destroy Comment', [comment.article, comment],
+    <br/>
+    <div class="text-center">
+      <%= link_to 'Delete', [comment.article, comment],
                   method: :delete,
-                  data: { confirm: 'Are you sure?' } %>
-    </p>
+                  data: { confirm: 'Are you sure?' },
+                  :class => "btn btn-outline-primary" %>
+    </div>
   </div>
 </div>
