--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <div class="jumbotron text-center">
-      <h1 font>Extra Basic</h1>
+      <h1>Extra Basic</h1>
       <p>A blog for extra girls who are basic af</p>
     </div>
       <%= yield %>
