move jumbotron title into div with id move jumbotron subtext outside of a tag to make smaller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 
   <body>
     <div class="jumbotron text-center">
-      <h1>Extra Basic</h1>
-      <p>A blog for extra girls who are basic af</p>
+      <div id="title">Extra Basic</div>
+      A blog for extra girls who are basic af
     </div>
       <%= yield %>
   </body>
