--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.jumbotron h1 {
+.jumbotron #title {
   font-family: 'Stalemate', cursive;
   font-size: 80px;
 }
