--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,12 @@
-<h1>Articles:</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Articles</a>
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <span class="glyphicon glyphicon-plus"></span>
+      <a class="nav-link btn navbar-btn" href=<%= new_article_path %> role="button">New article</a>
+    </li>
+  </ul>
+</nav>
 <table class="table container">
   <thead>
     <tr>
@@ -23,6 +31,4 @@
     <% end %>
   </tbody>
 </table>
-<div class="container text-center">
-  <a class="btn btn-primary" href=<%= new_article_path %> role="button">New article</a>
-</div>
+
