use font-awesome for icons add plus to new article button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 @import 'bootstrap';
 @import url('https://fonts.googleapis.com/css?family=Stalemate');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 * {
   font-family: 'Josefin Slab', serif;
