--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,7 @@
   <a class="navbar-brand" href="#">Articles</a>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <span class="glyphicon glyphicon-plus"></span>
-      <a class="nav-link btn navbar-btn" href=<%= new_article_path %> role="button">New article</a>
+      <a class="nav-link btn navbar-btn" href=<%= new_article_path %> role="button"><i class="fa fa-plus"></i> New article</a>
     </li>
   </ul>
 </nav>
