--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,9 @@
   <a class="navbar-brand" href="#">Articles</a>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link btn navbar-btn" href=<%= new_article_path %> role="button"><i class="fa fa-plus"></i> New article</a>
+      <a class="btn btn-outline-primary" href=<%= new_article_path %> role="button">
+        <i class="fa fa-plus"></i> New
+      </a>
     </li>
   </ul>
 </nav>
