--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,10 +22,12 @@
         <td><%= link_to article.title, article_path(article) %></td>
         <td><%= article.text %></td>
         <td>
-          <%= link_to 'Edit', edit_article_path(article) %>
-          <%= link_to 'Destroy', article_path(article),
-                      method: :delete,
-                      data: { confirm: 'Are you sure?' } %>
+          <a href=<%= edit_article_path(article) %> role="button">
+            <i class="far fa-edit"></i>
+          </a>
+          <%= link_to article_path(article), method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="far fa-trash-alt"></i>
+          <% end %>
         </td>
       </tr>
 
