specify column widths on articles index limit article text to 160 chars

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,8 +11,8 @@
 <table class="table container">
   <thead>
     <tr>
-      <th scope="col">Title</th>
-      <th scope="col">Text</th>
+      <th scope="col" class="w-25">Title</th>
+      <th scope="col" class="w-50">Text</th>
       <th scope="col" class="text-center">Actions</th>
     </tr>
   </thead>
@@ -20,7 +20,7 @@
     <% @articles.each do |article| %>
       <tr>
         <td><%= link_to article.title, article_path(article) %></td>
-        <td><%= article.text %></td>
+        <td><%= truncate article.text, length: 160 %></td>
         <td class="text-center">
           <a href=<%= edit_article_path(article) %> role="button">
             <i class="far fa-edit"></i>
