--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'bootstrap';
 @import url('https://fonts.googleapis.com/css?family=Stalemate');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
@@ -37,7 +38,7 @@
 }
 .jumbotron #title {
   font-family: 'Stalemate', cursive;
-  font-size: 80px;
+  font-size: 5em;
 }
 
 //body {
@@ -45,5 +46,15 @@
 //}
 
 .navbar-brand {
-  font-size: 50px;
+  font-size: 2.5em;
+}
+
+.eb-header {
+  font-size: 2em;
+}
+
+.eb-article {
+  line-height: 1.5;
+  font-size: 100%;
+  //font-family: 'Merriweather', Georgia, 'Times New Roman', Times, serif;
 }
