--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,12 +15,12 @@
 
   <div class="form-group">
     <%= form.label :title, class: "control-label" %><br/>
-    <%= form.text_field :title, class: "form-control" %>
+    <%= form.text_field :title, class: "form-control", placeholder: 'Enter title' %>
   </div>
 
   <div class="form-group">
     <%= form.label :text, class: "control-label" %><br/>
-    <%= form.text_area :text, class: "form-control" %>
+    <%= form.text_area :text, class: "form-control", placeholder: 'Content', size: '60x10' %>
   </div>
 
   <p>
