--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,11 +2,11 @@
               local: true) do |form| %>
   <div class="form-group">
     <%= form.label :commenter, class: "control-label" %><br/>
-    <%= form.text_field :commenter, class: "form-control" %>
+    <%= form.text_field :commenter, class: "form-control", placeholder: 'Name' %>
   </div>
   <div class="form-group">
     <%= form.label :body, class: "control-label" %><br/>
-    <%= form.text_area :body, class: "form-control" %>
+    <%= form.text_area :body, class: "form-control", placeholder: 'Comment' %>
   </div>
   <p>
     <%= form.submit %>
