--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Articles</a>
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="btn btn-outline-primary" href=<%= new_article_path %> role="button">
+<div class="container">
+  <div class="row h-100">
+    <div class="col-auto mr-auto my-auto">
+      <h1 class="display-5">Articles</h1>
+    </div>
+    <div class="col-auto my-auto">
+      <a class="btn" href=<%= new_article_path %> role="button">
         <i class="fa fa-plus"></i> New
       </a>
-    </li>
-  </ul>
-</nav>
+    </div>
+  </div>
+</div>
 <table class="table container">
   <thead>
     <tr>
