--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,28 @@
 <div class="container">
-  <h2><%= @article.title %></h2>
-  <p><%= @article.text%></p>
+  <div class="row h-100">
+    <div class="col-auto mr-auto my-auto">
+      <h1 class="display-5"><%= @article.title %></h1>
+    </div>
+    <div class="col-auto my-auto">
+      <a class="btn" href=<%= edit_article_path %> role="button">
+        <i class="far fa-edit"></i> Edit
+      </a>
+      <a class="btn" href=<%= articles_path %> role="button">
+        <i class="far fa-arrow-alt-circle-left"></i> Back
+      </a>
+    </div>
+  </div>
 </div>
-<div class="container text-center">
-  <a class="btn btn-primary" href=<%= edit_article_path %> role="button">Edit</a>
-  <a class="btn btn-primary" href=<%= articles_path %> role="button">Back</a>
+<div class="container eb-article mt-3 mb-5 mx-auto">
+  <p class="text-justify"><%= @article.text%></p>
 </div>
 <div class="container">
   <h2>Comments:</h2>
   <div class="card-columns">
     <%= render @article.comments %>
   </div>
-  <div class="container">
-    <h2>Add a comment:</h2>
+  <div class="container mt-3">
+    <h3>Add a comment:</h3>
     <%= render 'comments/form' %>
   </div>
 
