use bootstrap button for forms

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,9 +23,7 @@
     <%= form.text_area :text, class: "form-control", placeholder: 'Content', size: '60x10' %>
   </div>
 
-  <p>
-    <%= form.submit %>
-  </p>
+  <%= form.submit 'Submit', class: 'btn btn-primary' %>
 
 <% end %>
 
