--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 </div>
-<table class="table container">
+<table class="table container mb-4">
   <thead>
     <tr>
       <th scope="col" class="w-25">Title</th>
