--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
 <div class="container eb-article mt-3 mb-5 mx-auto">
   <p class="text-justify"><%= @article.text%></p>
 </div>
-<div class="container">
+<div class="container mb-4">
   <h2>Comments:</h2>
   <div class="card-columns">
     <%= render @article.comments %>
