--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import 'rails_bootstrap_forms';
 
 * {
   font-family: 'Josefin Slab', serif;
