--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,29 +1,5 @@
-<%= form_with model: @article, local: true do |form| %>
-
-  <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-      </h2>
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <%= form.label :title, class: "control-label" %><br/>
-    <%= form.text_field :title, class: "form-control", placeholder: 'Enter title' %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :text, class: "control-label" %><br/>
-    <%= form.text_area :text, class: "form-control", placeholder: 'Content', size: '60x10' %>
-  </div>
-
+<%= bootstrap_form_with model: @article, local: true do |form| %>
+  <%= form.text_field :title, placeholder: 'Enter title' %>
+  <%= form.text_area :text, placeholder: 'Content', size: '60x10' %>
   <%= form.submit 'Submit', class: 'btn btn-primary' %>
-
 <% end %>
-
