--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,5 @@
-<%= form_with(model: [ @article, @article.comments.build ],
-              local: true) do |form| %>
-  <div class="form-group">
-    <%= form.label :commenter, class: "control-label" %><br/>
-    <%= form.text_field :commenter, class: "form-control", placeholder: 'Name' %>
-  </div>
-  <div class="form-group">
-    <%= form.label :body, class: "control-label" %><br/>
-    <%= form.text_area :body, class: "form-control", placeholder: 'Comment' %>
-  </div>
+<%= bootstrap_form_with model: [ @article, @article.comments.build ], local: true do |form| %>
+  <%= form.text_field :commenter, placeholder: 'Enter your name' %>
+  <%= form.text_area :body, placeholder: 'Comment' %>
   <%= form.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
-
