--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,5 @@
+<%# byebug %>
+<!--FIXME: bootstrap_form_with does not support nested resources -->
 <%= bootstrap_form_with model: [ @article, @article.comments.build ], local: true do |form| %>
   <%= form.text_field :commenter, placeholder: 'Enter your name' %>
   <%= form.text_area :body, placeholder: 'Comment' %>
