use parsley for client side validation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import 'rails_bootstrap_forms';
+@import 'parsley';
 
 * {
   font-family: 'Josefin Slab', serif;
