--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -20,14 +20,15 @@
 <!--  </div>-->
 <%# end %>
 
-<%= form_with(model: [ @article, @article.comments.build ],local: true) do |form| %>
+<%= form_with(model: [ @article, @article.comments.build ],local: true, html: { "data-parsley-validate": true }) do |form| %>
   <div class="form-group">
     <%= form.label :commenter, class: "control-label" %><br/>
-    <%= form.text_field :commenter, class: "form-control", placeholder: 'Enter your name' %>
+    <%= form.text_field :commenter, class: "form-control", placeholder: 'Enter your name',
+                        required: true, 'data-parsley-minlength' => '5', 'data-parsley-trigger' => 'blur' %>
   </div>
   <div class="form-group">
     <%= form.label :body, class: "control-label" %><br/>
-    <%= form.text_area :body, class: "form-control", placeholder: 'Comment' %>
+    <%= form.text_area :body, class: "form-control", placeholder: 'Comment', required: true %>
   </div>
   <%= form.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
