--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,35 +1,17 @@
-<%# byebug %>
-<!--FIXME: bootstrap_form_with does not support nested resources -->
-<%#= bootstrap_form_with model: [ @article, @article.comments.build ], local: true do |form| %>
-  <%#= form.text_field :commenter, placeholder: 'Enter your name' %>
-  <%#= form.text_area :body, placeholder: 'Comment' %>
-  <%#= form.submit 'Submit', class: 'btn btn-primary' %>
-<%# end %>
-
-<%# if @comment.errors.any? %>
-<!--  <div id="error_explanation">-->
-<!--    <h2>-->
-<!--      <%#= pluralize(@comment.errors.count, "error") %> prohibited-->
-<!--      this comment from being saved:-->
-<!--    </h2>-->
-<!--    <ul>-->
-      <%# @comment.errors.full_messages.each do |msg| %>
-<!--        <li><%#= msg %></li>-->
-      <%# end %>
-<!--    </ul>-->
-<!--  </div>-->
-<%# end %>
-
-<%= form_with(model: [ @article, @article.comments.build ],local: true, html: { "data-parsley-validate": true }) do |form| %>
+<%= form_with(model: [ @article, @article.comments.build ], local: true, html: { "data-parsley-validate": true }) do |form| %>
   <div class="form-group">
     <%= form.label :commenter, class: "control-label" %><br/>
     <%= form.text_field :commenter, class: "form-control", placeholder: 'Enter your name',
-                        required: true, 'data-parsley-minlength' => '5', 'data-parsley-trigger' => 'blur' %>
+                        'data-parsley-required': true, 'data-parsley-minlength': '5',
+                        'data-parsley-trigger': 'blur'
+    %>
   </div>
   <div class="form-group">
     <%= form.label :body, class: "control-label" %><br/>
-    <%= form.text_area :body, class: "form-control", placeholder: 'Comment', required: true %>
+    <%= form.text_area :body, class: "form-control", placeholder: 'Comment',
+                       'data-parsley-required': true, 'data-parsley-minlength': '5',
+                       'data-parsley-trigger': 'blur'
+    %>
   </div>
   <%= form.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
-
