--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: [ @article, @article.comments.build ], local: true, html: { "data-parsley-validate": true }) do |form| %>
+<%= form_with(model: [ @article, @article.comments.build ], local: true,
+              html: { "data-parsley-validate": true }) do |form| %>
   <div class="form-group">
     <%= form.label :commenter, class: "control-label" %><br/>
     <%= form.text_field :commenter, class: "form-control", placeholder: 'Enter your name',
@@ -14,4 +15,7 @@
     %>
   </div>
   <%= form.submit 'Submit', class: 'btn btn-primary' %>
+  <script>
+      $("form").parsley()
+  </script>
 <% end %>
