--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,8 +14,5 @@
                        'data-parsley-trigger': 'blur'
     %>
   </div>
-  <%= form.submit 'Submit', class: 'btn btn-primary' %>
-  <script>
-    $("form").parsley()
-  </script>
+  <%= form.submit 'Submit', class: 'btn btn-primary', onClick: "javascript:$('form').parsley('validate');" %>
 <% end %>
