--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,8 +19,7 @@
 <div class="container mb-4">
   <h2>Comments:</h2>
   <div class="card-columns">
-    <!--    Don't show empty comments -->
-    <%= render @article.comments.reject { |x| x.id == nil } %>
+    <%= render @article.comments %>
   </div>
   <div class="container mt-3">
     <h3>Add a comment:</h3>
